# ninja-rss

./: Cargo.toml  LICENSE  README.md
cli/: Cargo.toml
cli/src/: display.rs  opt.rs
lib/: Cargo.toml
lib/migrations/2020-12-21-140527_create_feed_items/: down.sql  up.sql
lib/src/database/: models.rs  schema.rs
migrations/2020-12-20-032959_create_feeds/: down.sql  up.sql
migrations/2020-12-21-140527_create_feed_items/: down.sql  up.sql
src/: feeds.rs  lib.rs  main.rs  rss.rs  rss_manager.rs
src/cli/: display.rs  mod.rs  opt.rs  setup.rs
src/database/: crud.rs  mod.rs  models.rs  schema.rs
